Fix flickering sidebar active marker

--- a/static/less/sidebar.less
+++ b/static/less/sidebar.less
@@ -2,10 +2,11 @@
   ul {
     padding:0 0 0 20px;
   }
+
 	li {
 		color:#4a4a4a;
 		font-family: @roboto;
-    font-weight: 400;
+    font-weight: 700;
 		list-style:none;
     margin-bottom: 5px;
 
@@ -26,17 +27,20 @@
 		margin-bottom:8px;
 		padding-left:17px;
     margin-left: -17px;
+    line-height: 1;
 
 		a {
 			font-size:14px;
 			line-height:18px;
 			font-family: @roboto-condensed;
-      font-weight: 400;
+      font-weight: 700;
+      display: block;
 		}
 
 		&.selected,
 		&.hover {
 			background:url('../img/arrow-nav.png') no-repeat left center;
+      background-size: auto 8px;
 		}
 
 		a:hover {
